// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TeamInfo should match snapshot, with icon 1`] = `
<div
  className="team-info-block"
>
  <span
    className="icon"
  >
    <div
      className="team-btn__image"
      style={
        Object {
          "backgroundImage": "url('test')",
        }
      }
    />
  </span>
  <div
    className="team-data"
  >
    <div
      className="title"
    >
      Test team
    </div>
  </div>
</div>
`;

exports[`components/TeamInfo should match snapshot, without icon 1`] = `
<div
  className="team-info-block"
>
  <span
    className="icon"
  >
    <div
      className="team-btn__initials"
    >
      Te
    </div>
  </span>
  <div
    className="team-data"
  >
    <div
      className="title"
    >
      Test team
    </div>
  </div>
</div>
`;
